# BankInsight

./: .gitignore  CSV_A_NL77RABO0327533137_EUR_20240518_20250830.csv  README.md  budget-data.csv  export.csv  finanseer.db  pyproject.toml
src/finanseer/: __init__.py  __main__.py  core.py  db.py  exporters.py  importers.py  models.py  schemas.py  text_processing.py
tests/: test_core.py  test_importers.py  test_schemas.py  test_text_processing.py
